--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
     = bootstrap_devise_error_messages!
     .form-group.mb-4
       = f.label :name
-      = f.email_field :name, autofocus: true, autocomplete: 'name', class: 'form-control'
+      = f.text_field :name, autofocus: true, autocomplete: 'name', class: 'form-control'
     .form-group.mb-4
       = f.label :email
       = f.email_field :email, autocomplete: 'email', class: 'form-control'
