Add place model and migration

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -1,1 +1,8 @@
-%h1 Hi, user
+.container
+  %h1 Hi, #{@user.name}
+  %br
+  %h2 Statistics:
+  %br
+  %h3 This week you walked 15 km
+  %br
+  %h3 This month daily distances:
