Add create action in activities controller

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -3,6 +3,6 @@
   %br
   %h2 Statistics:
   %br
-  %h3 This week you walked 15 km
+  %h3 This week you walked #{kilometers_this_week} km
   %br
   %h3 This month daily distances:
