Add user helper

--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -3,6 +3,7 @@
   %br
   %h2 Statistics:
   %br
-  %h3 This week you walked #{kilometers_this_week} km
+  %h3 This week you walked #{week_kilometers(@user)} km
   %br
-  %h3 This month daily distances:
+  %h3 This month daily distances: #{month_kilometers(@user)}
+ 
