--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -1,9 +1,42 @@
 .container
-  %h1 Hi, #{@user.name}
-  %br
-  %h2 Statistics:
-  %br
-  %h3 This week you walked #{week_kilometers(@user)} km
-  %br
-  %h3 This month daily distances: #{month_kilometers(@user)}
- 
+  .row.full-height
+    .col-lg-9.full-height.d-flex.flex-column.ps-5.pe-5
+      .d-flex.flex-row.justify-content-between.align-items-center.border-bottom.border-warning.mb-3
+        .fs-1
+          = @user.name.upcase
+        .fs-4.text-muted
+          = @user.email
+      .fs-2.fw-bold.text-uppercase.text-center.mb-3.pb-3.border-bottom.border-warning  
+        your walks
+      .fs-2.text-uppercase.text-center.mb-1 
+        this week 
+      .d-flex.flex-row.justify-content-center.fs-2.pb-3.mb-3.border-bottom.border-warning 
+        .text-warning.me-1
+          #{week_kilometers(@user)}
+        .text-black
+        km
+      .fs-2.text-uppercase.text-center.mb-1 
+        this month
+      .d-flex.flex-row.justify-content-center.fs-2.mb-3
+        .text-warning.me-1
+          #{month_kilometers(@user)}
+        .text-black
+        km
+      .fs-4.text-uppercase.text-center.mb-1 
+        daily distances
+      %table.table
+        %thead
+          %tr
+            %th{scope: "col"} Day
+            %th{scope: "col"} Distance
+        %tbody
+          - month_kilometers_daily(@user).each do |key, val|
+            %tr
+              %td #{key.to_s(:short)}
+              %td #{val} km
+    .col-lg-3.full-height.d-flex.flex-column.ps-5.pe-5.border-start.border-warning
+
+      = link_to 'ADD WALK', new_activity_url, class: "btn btn-secondary btn-lg mb-3"
+      = link_to 'Walks', activities_url, class: "btn btn-secondary mb-3"
+      = link_to 'Account', user_url(@user), class: "btn btn-secondary mb-3"
+      = link_to 'Logout', destroy_user_session_url, method: :delete, class: "btn btn-secondary mb-3"
