--- a/app/views/activities/new.html.haml
+++ b/app/views/activities/new.html.haml
@@ -3,12 +3,13 @@
   = form_for(:activity, url: activities_path) do |f|
     .form-group.mb-4
       = f.label :start_address
-      = f.text_field :start_address, autofocus: true, class: 'form-control'
+      = f.text_field :start_address, class: 'form-control'
     .form-group.mb-4
       = f.label :finish_address
-      = f.text_field :finish_address, class: 'form-control'
+      = f.text_field :finish_address, class: 'form-control input-field'
     .form-group.mb-4
       = f.label :day
       = f.date_field :day, class: 'form-control'
-    .form-group.mb-4
-      = f.submit 'Add', class: 'btn btn-primary'
+    .form-group.mb-5
+      = f.submit 'Add', class: 'btn btn-secondary'
+  = link_to 'Back to dashboard', root_url, class: "link-secondary text-decoration-none fs-5"
