--- a/app/views/activities/new.html.haml
+++ b/app/views/activities/new.html.haml
@@ -12,4 +12,5 @@
       = f.date_field :day, class: 'form-control'
     .form-group.mb-5
       = f.submit 'Add', class: 'btn btn-secondary'
-  = link_to 'Back to dashboard', root_url, class: "link-secondary text-decoration-none fs-5"
+  %h4    
+    = link_to 'Back to dashboard', root_url, class: "text-muted text-decoration-none fs-5"
