--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,6 @@
     = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'shared/flash'  
-    = yield
+    .container
+      .row.mt-5
+        = yield
