--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -1,42 +1,40 @@
-.container
-  .row
-    .col-lg-9.d-flex.flex-column.ps-5.pe-5
-      .d-flex.flex-row.justify-content-between.align-items-center.border-bottom.border-warning.mb-3
-        .fs-1
-          = @user.name.upcase
-        .fs-4.text-muted
-          = @user.email
-      .fs-2.fw-bold.text-uppercase.text-center.mb-3.pb-3.border-bottom.border-warning  
-        my walks
-      .fs-2.text-uppercase.text-center.mb-1 
-        this week 
-      .d-flex.flex-row.justify-content-center.fs-2.pb-3.mb-3.border-bottom.border-warning 
-        .text-warning.me-1
-          #{week_kilometers(@user)}
-        .text-black
-        km
-      .fs-2.text-uppercase.text-center.mb-1 
-        this month
-      .d-flex.flex-row.justify-content-center.fs-2.mb-3
-        .text-warning.me-1
-          #{month_kilometers(@user)}
-        .text-black
-        km
-      .fs-4.text-uppercase.text-center.mb-1 
-        daily distances
-      %table.table
-        %thead
-          %tr
-            %th{scope: "col"} Day
-            %th{scope: "col"} Distance
-        %tbody
-          - month_kilometers_daily(@user).each do |key, val|
-            %tr
-              %td #{key.to_s(:short)}
-              %td #{val} km
-    .col-lg-3.d-flex.flex-column.ps-5.pe-5.border-start.border-warning
+.col-lg-9.d-flex.flex-column.pl-5.pr-5
+  .d-flex.flex-row.justify-content-between.align-items-center.border-bottom.border-warning.mb-3.pb-3
+    %h2
+      = @user.name.upcase
+    %h5.text-muted
+      = @user.email
+  %h2.font-weight-bold.text-uppercase.text-center.mb-3.pb-3.border-bottom.border-warning  
+    my walks
+  %h3.text-uppercase.text-center.mb-1 
+    this week 
+  .d-flex.flex-row.justify-content-center.fs-2.pb-3.mb-3.border-bottom.border-warning 
+    %h3.text-warning.mr-2
+      #{week_kilometers(@user)}
+    %h3.text-black
+      km
+  %h3.text-uppercase.text-center.mb-1 
+    this month
+  .d-flex.flex-row.justify-content-center.fs-2.mb-3
+    %h3.text-warning.mr-2
+      #{month_kilometers(@user)}
+    %h3.text-black
+      km
+  %h5.text-uppercase.text-center.mb-2 
+    daily distances
+  %table.table
+    %thead
+      %tr
+        %th{scope: "col"} Day
+        %th{scope: "col"} Distance
+    %tbody
+      - month_kilometers_daily(@user).each do |key, val|
+        %tr
+          %td #{key.to_s(:short)}
+          %td #{val} km
+.col-lg-3.d-flex.flex-column.pl-5.pr-5.border-start.border-warning
 
-      = link_to 'ADD WALK', new_activity_url, class: "btn btn-secondary btn-lg mb-4"
-      = link_to 'Walks', activities_url, class: "btn btn-secondary mb-4"
-      = link_to 'Account', user_url(@user), class: "btn btn-secondary mb-4"
-      = link_to 'Logout', destroy_user_session_url, method: :delete, class: "btn btn-secondary"
+  = link_to 'ADD WALK', new_activity_url, class: "btn btn-secondary btn-lg mb-4"
+  = link_to 'Walks', activities_url, class: "btn btn-secondary mb-4"
+  = link_to 'Account', user_url(@user), class: "btn btn-secondary mb-4"
+  = link_to 'Logout', destroy_user_session_url, method: :delete, class: "btn btn-secondary"
