Modify flash view partial

--- a/app/views/shared/_flash.html.haml
+++ b/app/views/shared/_flash.html.haml
@@ -1,3 +1,4 @@
 - flash.each do |category, message| 
   %div{ class: "alert #{category == 'alert' ? 'alert-danger' : 'alert-success'}"}
-    = message
+    - message.each do |m|
+      %p #{m.capitalize}
