--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,23 +1,24 @@
+- user = present(@user)
 .col-lg-9.d-flex.flex-column.pl-5.pr-5
   .d-flex.flex-row.justify-content-between.align-items-center.border-bottom.border-warning.mb-3.pb-3
     %h2
-      = @user.name.upcase
+      = user.name.upcase
     %h5.text-muted
-      = @user.email
+      = user.email
   %h2.font-weight-bold.text-uppercase.text-center.mb-3.pb-3.border-bottom.border-warning  
     my walks
   %h3.text-uppercase.text-center.mb-1 
     this week 
   .d-flex.flex-row.justify-content-center.fs-2.pb-3.mb-3.border-bottom.border-warning 
     %h3.text-warning.mr-2
-      #{week_kilometers(@user)}
+      #{user.week_kilometers}
     %h3.text-black
       km
   %h3.text-uppercase.text-center.mb-1 
     this month
   .d-flex.flex-row.justify-content-center.fs-2.mb-3
     %h3.text-warning.mr-2
-      #{month_kilometers(@user)}
+      #{user.month_kilometers}
     %h3.text-black
       km
   %h5.text-uppercase.text-center.mb-2 
@@ -28,7 +29,7 @@
         %th{scope: "col"} Day
         %th{scope: "col"} Distance
     %tbody
-      - month_kilometers_daily(@user).each do |key, val|
+      - user.month_kilometers_daily.each do |key, val|
         %tr
           %td #{key.to_s(:short)}
           %td #{val} km
